--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
