--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
-    "styled-components": "^6.1.9"
+    "styled-components": "^6.1.9",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
