--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.9",
     "swiper": "^11.1.1"
   },
