--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.0.2",
+    "@tabler/icons-react": "^3.3.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.9",
     "gsap": "^3.12.5",
     "next": "14.2.3",
     "react": "^18",
@@ -16,7 +20,8 @@
     "react-player": "^2.16.0",
     "sharp": "^0.33.3",
     "styled-components": "^6.1.9",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
